--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                           <div class="col-md-4 col-sm-4 col-xs-12 text-xs-center wow fadeInDown" data-wow-delay=".2s">
   						<div class="service-box">
                               <div class="icon">
-                                  <img src="images/prügi.png" alt="Custom Image"><h3>Prügi</h3>
+                                  <img src="images/prygi.png" alt="Custom Image"><h3>Prügi</h3>
                               </div>
 
                               <p>Koristuse käigus tühjendame kõik elamises asuvad prügikastid.</p>
