--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <!-- Section Header -->
                   <div class="col-md-12 col-sm-12 col-xs-12 section-header wow fadeInDown">
                       <h2><span class="highlight-text">Puhastusteenused</span></h2>
-                      <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">Pakume parimat kvaliteeti ning usaldusväärsust. Kui Te pole rahul meie teenusega, puhastame uuesti. Kõik meie spetsialistid on rõõmsameelsed professionaalid, kes leiavad lahenduse iga situatsioonis.</p>
+                      <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">Pakume parimat kvaliteeti ning usaldusväärsust. Meie puhastus säästab Teie aega ja närve. Kõik meie spetsialistid on rõõmsameelsed professionaalid, kes leiavad lahenduse igas situatsioonis.</p>
                   </div>
                   <!-- Section Header End -->
 
@@ -183,7 +183,7 @@
                               <div class="icon">
                                   <img src="images/elutuba.png" alt="Custom Image"> <h3>Eluruumid</h3>
                               </div>
-                              <p>Eluruumide koristus sisaldab tubade puhastamist – alustades põrandatest ning lõpetades klaaspindadega.</p>
+                              <p>Koristame Teie eluruumid korralikult - alustades põrandatest ja lõpetades klaaspindadega.</p>
   							</div>
   </div>
                           <div class="col-md-4 col-sm-4 col-xs-12 text-xs-center wow fadeInDown" data-wow-delay=".2s">
@@ -192,13 +192,13 @@
                                   <img src="images/vann.png" alt="Custom Image"><h3>Sanitaarruumid </h3>
                               </div>
 
-                              <p>Lööme Teie vannitoa ning toalettruumi läikima.</p>
+                              <p>Lööme Teie vannitoa ning tualettruumi läikima.</p>
                           </div>
   </div>
                           <div class="col-md-4 col-sm-4 col-xs-12 text-xs-center wow fadeInDown" data-wow-delay=".2s">
   						<div class="service-box">
                               <div class="icon">
-                                  <img src="images/prygi.png" alt="Custom Image"><h3>Prügi</h3>
+                                  <img src="images/prugi.png" alt="Custom Image"><h3>Prügi</h3>
                               </div>
 
                               <p>Koristuse käigus tühjendame kõik elamises asuvad prügikastid.</p>
@@ -214,7 +214,7 @@
                                   <img src="images/aknapesu.png" alt="Custom Image"><h3>Aknad</h3>
                               </div>
 
-                              <p>Peseme kõik sinu kodu aknad ning aknalauad nii seest kui väljast.</p>
+                              <p>Peseme kõik Teie kodu aknad ning aknalauad nii seest kui väljast.</p>
                           </div>
   </div>
                           <div class="col-md-4 col-sm-4 col-xs-12 text-xs-center wow fadeInDown" data-wow-delay=".1s">
@@ -232,7 +232,7 @@
                                   <img src="images/diivan.png" alt="Custom Image"><h3>Mööbli sügavpuhastus</h3>
                               </div>
 
-                              <p>Säästame Teie aega ning raha ja puhastame Teie mööbli</p>
+                              <p>Säästame Teie aega ning raha ja puhastame Teie mööbli.</p>
                           </div>
   </div>
                       </div>
@@ -260,13 +260,17 @@
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-xs-12 customized-text wow fadeInDown black-ed">
-				<p>Nestlux on spetsialiseerunud kinnisvara haldusele ning hooldamisele. Pakume täielikku Airbnb haldusteenust, et kinnisvara omanikul jääks rohkem aega tegeleda talle oluliste asjadega. Samuti pakume kinnisvara hooldus- ning puhastusteenuseid.</p>
-                    <div class="row">
+				<p>Nestlux on spetsialiseerunud kinnisvara haldusele ning hooldamisele. Pakume täielikku Airbnb haldusteenust, et kinnisvara omanikul jääks rohkem aega tegeleda talle oluliste asjadega. Samuti pakume puhastusteenuseid ning konsultatsiooni.</p>
+                <div class="row">
                         <div class="col-md-11">
-                            <strong>Meid iseloomustab:</strong>
+                            <strong></strong>
                             <p></p>
                         </div>
                         <div class="row">
+                            <div class="col-md-11">
+                                <strong>Meid iseloomustab: </strong>
+                                <p></p>
+                            </div>
                             <div class="col-md-11">
                                 <strong>Kvaliteet</strong>
                                 <p>Tööd teevad alati oma ala eksperdid. Meie jaoks on oluline, et lõpptulemus oleks perfektne.</p>
@@ -366,7 +370,7 @@
 					<ul>
                             <li><i class="fa fa-home"></i>Avamaa tn 6, Laagri alevik, Harjumaa</li>
                             <li><i class="fa fa-phone"></i>+372 5554 6556</li>
-                            <li><i class="fa fa-envelope-o"></i>support@website.com</li>
+                            <li><i class="fa fa-envelope-o"></i>info@nestlux.ee</li>
                         </ul>
                 </div>
             </div>
