--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Businnes, Portfolio, Corporate">
 	<meta name="Author" content="WebThemez">
-    <title>Executive corporate business Bootstrap4 Website Template</title>
+    <title>Nestlux</title>
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
