--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     <li><i class="fa fa-home"></i>Avamaa tn 6, Laagri alevik, Harjumaa</li>
                     <li><i class="fa fa-phone"></i>+372 5900 0338</li>
                     <li><i class="fa fa-phone"></i>+372 5554 6556</li>
-                    <li><i class="fa fa-envelope-o"></i>info@nestlux.ee</li>
+                    <li><i class="fa fa-envelope-o"></i>info.nestlux@gmail.com</li>
                 </ul>
             </div>
         </div>
