--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
                 <p>Reg nr: 14954849</p>
                 <ul>
                     <li><i class="fa fa-home"></i>Avamaa tn 6, Laagri alevik, Harjumaa</li>
-                    <li><i class="fa fa-phone"></i>+372 5900 0338</li>
-                    <li><i class="fa fa-phone"></i>+372 5554 6556</li>
-                    <li><i class="fa fa-envelope-o"></i>info.nestlux@gmail.com</li>
+                    <li><i class="fa fa-phone"></i><a href="tel:+372 5900 0338">+372 5900 0338</a></li>
+                    <li><i class="fa fa-phone"></i><a href="tel:+372 5554 6556">+372 5554 6556</a></li>
+                    <li><i class="fa fa-envelope-o"></i><a href="mailto:info@nestlux.ee">info@nestlux.ee</a></li>
                 </ul>
             </div>
         </div>
