--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Businnes, Portfolio, Corporate">
-    <meta name="Author" content="WebThemez">
-    <title>Nestlux</title>
+    <meta name="description" content="Airbnb kinnisvara haldus, hooldus ja puhastus. Aitame muuta Teie tegevuse
+    efektiivsemaks ning säästame aega oluliste asjade jaoks">
+    <meta name="Author" content="Costlio">
+    <title>Nestlux: Airbnb haldus-hooldus-puhastus</title>
     <link rel="icon" type="image/png" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
