--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Basic SEO start -->
     <meta name="description" content="Airbnb kinnisvara haldus, hooldus ja puhastus. Aitame muuta Teie tegevuse
     efektiivsemaks ning säästame aega oluliste asjade jaoks">
+    <meta name="og:title" property="og:title" content="Nestlux: Airbnb haldus-hooldus-puhastus">
+    <meta property="og:description" content="Airbnb kinnisvara haldus, hooldus ja puhastus. Aitame muuta Teie tegevuse
+    efektiivsemaks ning säästame aega oluliste asjade jaoks" />
+    <meta property="og:image" content="https://nestlux.ee/images/slider/slider-img-1.jpg" />
+    <!-- Basic SEO end -->
     <meta name="Author" content="Costlio">
     <title>Nestlux: Airbnb haldus-hooldus-puhastus</title>
     <link rel="icon" type="image/png" href="images/favicon.ico"/>
